[tool.poetry]
name = "bolinette"
version = "0.16.1"
description = "An inversion of control framework in Python"
authors = ["Pierre Chat <pierrechat@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://bolinette.org"
repository = "https://github.com/bolinette/bolinette"
documentation = "https://bolinette.org/docs"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.23"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
autopep8 = "^2.0.4"
black = "^23.11.0"
coverage = "^7.3.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

select = ["E", "W", "F", "B", "Q", "I", "N", "RUF", "UP"]
ignore = ["B010"]
fixable = ["ALL"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.mccabe]
max-complexity = 10

[tool.isort]
py_version = 311
line_length = 120
skip = ["__init__.py"]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ['pass', 'if TYPE_CHECKING:', '\.\.\.']
