[tool.poetry]
name = "bolinette-api"
version = "0.18.0"
description = "The Bolinette api package, based on bolinette-data and bolinette-web"
readme = "README.md"
authors = ["Pierre Chat <pierrechat@outlook.com>"]
license = "MIT"
homepage = "https://bolinette.org"
repository = "https://github.com/bolinette/bolinette"
documentation = "https://bolinette.org/docs"
keywords = ["Bolinette", "Framework", "REST", "API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "bolinette/api" }]

[tool.poetry.dependencies]
python = "^3.12"
bolinette-data = "^0.18.0"
bolinette-web = "^0.18.0"
