[tool.poetry]
name = "bolinette-data"
version = "0.18.0"
description = "The Bolinette data package, an async data management framework, based on Bolinette and SQLAlchemy"
readme = "README.md"
authors = ["Pierre Chat <pierrechat@outlook.com>"]
license = "MIT"
homepage = "https://bolinette.org"
repository = "https://github.com/bolinette/bolinette"
documentation = "https://bolinette.org/docs"
keywords = ["Bolinette", "Framework", "ORM", "Data Management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "bolinette/data" }]

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"
bolinette = "^0.18.0"
sqlalchemy = "^2.0.18"
