[tool.poetry]
name = "bolinette-web"
version = "0.18.0"
description = "The Bolinette web package, an async Http and Websocket framework, based on Bolinette"
readme = "README.md"
authors = ["Pierre Chat <pierrechat@outlook.com>"]
license = "MIT"
homepage = "https://bolinette.org"
repository = "https://github.com/bolinette/bolinette"
documentation = "https://bolinette.org/docs"
keywords = ["Bolinette", "Framework", "Http", "Websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "bolinette/web" }]

[tool.poetry.dependencies]
python = "^3.12"
bolinette = "^0.18.0"
